<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Project_Pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="crri@todo.todo">crri</maintainer>
  <license>TODO: License declaration</license>

  <!-- Runtime and build dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Optional if you're using nav_msgs, sensor_msgs, etc. -->
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Testing tools -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
